--- a/cv.tex
+++ b/cv.tex
@@ -95,6 +95,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 \item Implemented hub locking for the data eviction project.
 \item Created simple and extendable cli tooling for all development, build, test, release and other tasks.
 \item Worked with support team to investigate customer issues
+\item Introduced Renovate to automatically manage dependency version upgrades in Confluence Server
 ~
 \end{rSubsection}
 
